<resources>
    <string name="app_name">prc_006_mob</string>
    <string name="main_activity_password_input_hint">Password</string>
    <string name="main_activity_mail_input_hint">Mail</string>
    <string name="main_activity_loggin_button_text">Login</string>
    <string name="main_activity_register_button_text">Register</string>
    <string name="loggin_toast_text">Please fill all fields</string>
    <string name="register_mail_input_hint">Mail</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_register_button_text">Sign Up</string>
    <string name="register_login_button_text">Login</string>
    <string name="register_toast_text">Please fill all fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>